# kyvoris-profiler

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  kyvoris-profiler.toml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: cli.md  examples.md  github-issues.md  metrics.md  pull-request-descriptions.md  release-checklist.md  report-schema.md  roadmap.md  weekly-milestones.md
docs/design/: technical-design.md
examples/: run_async_demo.py  run_comparison_demo.py  run_demo.py  run_endpoint_demo.py  run_model_demo.py
scripts/: release-check.ps1  test-all.ps1
src/kyvoris_profiler/: __init__.py  __main__.py  benchmark.py  cli.py  compare.py  endpoint.py  history.py  metrics.py  report.py
tests/: test_benchmark.py  test_benchmark_pytest.py  test_cli.py
tests/fixtures/: __init__.py  cli_targets.py
