[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "kyvoris-profiler"
version = "0.14.0"
description = "Lightweight profiling utilities for AI inference workloads."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Kyvoris" }
]
keywords = ["benchmarking", "profiling", "ai", "inference", "latency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Benchmark",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Kyvoris/kyvoris-profiler"
Repository = "https://github.com/Kyvoris/kyvoris-profiler"
Issues = "https://github.com/Kyvoris/kyvoris-profiler/issues"

[project.scripts]
kyvoris-profiler = "kyvoris_profiler.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1",
    "pytest>=8",
    "twine>=5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
